cli/tests/snapshots/pipeline_golden__golden_pipeline_fnonce_coercion.snap
---
source: cli/tests/pipeline_golden.rs
expression: output
---
DefEqConfig
  fuel: 100000
  source: default
  transparency: Reducible

ElaboratedDef add_one
  ty: Pi(Ind("Nat", []), Ind("Nat", []), Default, Fn)
  val: Lam(Ind("Nat", []), App(Ctor("Nat", 1, []), Var(0)), Default, Fn)

ElaboratedDef apply_once
  ty: Pi(Pi(Ind("Nat", []), Ind("Nat", []), Default, FnOnce), Pi(Ind("Nat", []), Ind("Nat", []), Default, FnOnce), Default, Fn)
  val: Lam(Pi(Ind("Nat", []), Ind("Nat", []), Default, FnOnce), Lam(Ind("Nat", []), App(Var(1), Var(0)), Default, FnOnce), Default, Fn)

ElaboratedDef test_coercion
  ty: Ind("Nat", [])
  val: App(App(Const("apply_once", []), Lam(Ind("Nat", []), App(Const("add_one", []), Var(0)), Default, FnOnce)), Ctor("Nat", 0, []))

MirBody add_one
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: Closure(Region(1), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [Nat], Nat), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody apply_once
  Body { basic_blocks: [BasicBlockData { statements: [Assign(Place { local: Local(0), projection: [] }, Use(Constant(Constant { literal: Closure(1, []), ty: Closure(Region(1), [], [FnOnce([], [Nat], Nat)], FnOnce([], [Nat], Nat)) })))], terminator: Some(Goto { target: BasicBlock(1) }) }, BasicBlockData { statements: [], terminator: Some(Return) }], local_decls: [LocalDecl { ty: Fn([], [FnOnce([], [Nat], Nat)], FnOnce([], [Nat], Nat)), name: Some("_0"), is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

MirBody test_coercion
  Body { basic_blocks: [BasicBlockData { statements: [StorageLive(Local(1)), Assign(Place { local: Local(1), projection: [] }, Use(Constant(Constant { literal: GlobalDef("apply_once"), ty: FnItem(DefId(10926120682626049322), [], [FnOnce([], [Nat], Nat)], FnOnce([], [Nat], Nat)) })))], terminator: Some(Goto { target: BasicBlock(2) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3)), StorageDead(Local(2)), StorageDead(Local(1))], terminator: Some(Return) }, BasicBlockData { statements: [StorageLive(Local(2)), Assign(Place { local: Local(2), projection: [] }, Use(Constant(Constant { literal: Closure(0, []), ty: ClosureOnce(Region(2), [], [Nat], Nat) })))], terminator: Some(Goto { target: BasicBlock(3) }) }, BasicBlockData { statements: [StorageLive(Local(3))], terminator: Some(Call { func: Borrow(Shared, Place { local: Local(1), projection: [] }), args: [Copy(Place { local: Local(2), projection: [] })], destination: Place { local: Local(3), projection: [] }, target: Some(BasicBlock(4)) }) }, BasicBlockData { statements: [StorageDead(Local(2)), StorageDead(Local(1)), StorageLive(Local(4)), Assign(Place { local: Local(4), projection: [] }, Use(Constant(Constant { literal: Nat(0), ty: Nat })))], terminator: Some(Goto { target: BasicBlock(5) }) }, BasicBlockData { statements: [], terminator: Some(Call { func: Operand(Move(Place { local: Local(3), projection: [] })), args: [Copy(Place { local: Local(4), projection: [] })], destination: Place { local: Local(0), projection: [] }, target: Some(BasicBlock(6)) }) }, BasicBlockData { statements: [StorageDead(Local(4)), StorageDead(Local(3))], terminator: Some(Goto { target: BasicBlock(1) }) }], local_decls: [LocalDecl { ty: Nat, name: Some("_0"), is_prop: false, is_copy: true }, LocalDecl { ty: FnItem(DefId(10926120682626049322), [], [FnOnce([], [Nat], Nat)], FnOnce([], [Nat], Nat)), name: None, is_prop: false, is_copy: true }, LocalDecl { ty: ClosureOnce(Region(1), [], [Nat], Nat), name: None, is_prop: false, is_copy: true }, LocalDecl { ty: FnOnce([], [Nat], Nat), name: None, is_prop: false, is_copy: false }, LocalDecl { ty: Nat, name: None, is_prop: false, is_copy: true }], arg_count: 0, adt_layouts: AdtLayoutRegistry { layouts: {AdtId(Nat, 9339613782935747081): AdtLayout { adt: AdtId(Nat, 9339613782935747081), variants: [VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 0 }, fields: [] }, VariantLayout { ctor: CtorId { adt: AdtId(Nat, 9339613782935747081), index: 1 }, fields: [Nat] }], copy_requirements: [[]] }} } }

BorrowCheck add_one
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck apply_once
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)

BorrowCheck test_coercion
  ok
  evidence:
    regions:
      (none)
    loans:
      (none)
    runtime_checks:
      (none)
